@@ -1,3 +1,5 @@
 Julien Dutheil <Julien.Dutheil@univ-montp2.fr>
 Sylvain Gaillard 
+Nicolas Galtier
+Celine Scornavacca <scornava@lirmm.fr>
 
